force-app/main/default/objects/Wealth_Advisor__c/Wealth_Advisor__c.object-meta.xml
<CustomObject>
    <label>Wealth Advisor</label>
    <nameField>
        <label>Wealth Advisor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Wealth Advisors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>