force-app/main/default/objects/Wealth_Advisor__c/fields/Awards_and_Recognitions__c.field-meta.xml
<CustomField>
    <fullName>Awards_and_Recognitions__c</fullName>
    <description>A list of industry awards, recognitions, or professional memberships the advisor has received.</description>
    <label>Awards and Recognitions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>