force-app/main/default/objects/Wealth_Advisor__c/fields/Community_Involvement__c.field-meta.xml
<CustomField>
    <fullName>Community_Involvement__c</fullName>
    <description>A description of the advisor&apos;s charitable or community-focused activities.</description>
    <label>Community Involvement</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>