force-app/main/default/objects/Wealth_Advisor__c/fields/Customised_Approach__c.field-meta.xml
<CustomField>
    <fullName>Customised_Approach__c</fullName>
    <description>A description of the process the advisor follows to create personalized financial strategies.</description>
    <label>Customised Approach</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>