force-app/main/default/objects/Wealth_Advisor__c/fields/Investment_Philosophy__c.field-meta.xml
<CustomField>
    <fullName>Investment_Philosophy__c</fullName>
    <description>An explanation of the overarching principles guiding the advisor&apos;s approach to wealth management.</description>
    <label>Investment Philosophy</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>