force-app/main/default/objects/Wealth_Advisor__c/fields/Personal_Interests__c.field-meta.xml
<CustomField>
    <fullName>Personal_Interests__c</fullName>
    <description>Information about the advisor&apos;s hobbies or interests outside of work.</description>
    <label>Personal Interests</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>