force-app/main/default/objects/Wealth_Advisor__c/fields/Professional_Designations__c.field-meta.xml
<CustomField>
    <fullName>Professional_Designations__c</fullName>
    <description>List of the advisor&apos;s professional designations</description>
    <label>Professional Designations</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chartered Financial Analyst (CFA)</fullName>
            </value>
            <value>
                <fullName>Certified Financial Planner (CFP)</fullName>
            </value>
            <value>
                <fullName>Certified Private Wealth Advisor (CPWA)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>