force-app/main/default/objects/Wealth_Advisor__c/fields/Specialisations__c.field-meta.xml
<CustomField>
    <fullName>Specialisations__c</fullName>
    <description>A list of the advisor&apos;s areas of specialisation (e.g., Tax Planning, Estate Planning, Risk Management, Investment Management, Philanthropic Strategies).</description>
    <label>Specialisations</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Estate Planning</fullName>
            </value>
            <value>
                <fullName>Investment Management</fullName>
            </value>
            <value>
                <fullName>Philanthropic Strategies</fullName>
            </value>
            <value>
                <fullName>Risk Management</fullName>
            </value>
            <value>
                <fullName>Tax Planning</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>