force-app/main/default/objects/Wealth_Advisor__c/fields/Years_of_Experience__c.field-meta.xml
<CustomField>
    <fullName>Years_of_Experience__c</fullName>
    <description>The number of years the advisor has been working in the industry.</description>
    <label>Years of Experience</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>