force-app/main/default/objects/Wealth_Advisor__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Years_of_Experience__c</columns>
    <columns>Photo_URL__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>